Typing: enable mypy check "check_untyped_defs"

--- a/scrabble/mypy.ini
+++ b/scrabble/mypy.ini
@@ -12,7 +12,7 @@ warn_redundant_casts = True
 
 # The following checks fail, and they probably should be activated,
 # this would help making the code clearer and easier to refactor.
-;check_untyped_defs = True
+check_untyped_defs = True
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = False
 ;disallow_incomplete_defs = True
