typing: add check disallow_any_explicit => found hint for possible refactor

--- a/scrabble/mypy.ini
+++ b/scrabble/mypy.ini
@@ -14,7 +14,8 @@ warn_redundant_casts = True
 # this would help making the code clearer and easier to refactor.
 check_untyped_defs = True
 disallow_untyped_calls = True
-;disallow_untyped_defs = False
+disallow_untyped_defs = False
+disallow_any_explicit = True
 ;disallow_incomplete_defs = True
 
 
