--- a/scrabble/mypy.ini
+++ b/scrabble/mypy.ini
@@ -16,8 +16,8 @@ check_untyped_defs = True
 disallow_untyped_calls = True
 disallow_untyped_defs = False
 disallow_any_explicit = True
-;disallow_incomplete_defs = True
+disallow_incomplete_defs = True
 
 
 # This would enable all checks
-; strict = True
+strict = True
